--- a/Find One/Storyboard/Menu.storyboard
+++ b/Find One/Storyboard/Menu.storyboard
@@ -858,7 +858,7 @@
                                                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jHU-Za-1NC">
                                                                                                                 <rect key="frame" x="0.0" y="26" width="75" height="19"/>
                                                                                                                 <subviews>
-                                                                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Riyadh" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nHy-lz-vwj">
+                                                                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Riyadh" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nHy-lz-vwj">
                                                                                                                         <rect key="frame" x="10" y="0.0" width="65" height="19"/>
                                                                                                                         <color key="textColor" red="0.44705882349999998" green="0.70980392160000005" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                                                                         <fontDescription key="fontDescription" name="Outfit-Regular" family="Outfit" pointSize="14"/>
@@ -943,7 +943,7 @@
                                                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdu-od-HTR">
                                                                                                                 <rect key="frame" x="0.0" y="22" width="90" height="23"/>
                                                                                                                 <subviews>
-                                                                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="All District" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pwV-jy-ayD">
+                                                                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="All District" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pwV-jy-ayD">
                                                                                                                         <rect key="frame" x="10" y="0.0" width="80" height="23"/>
                                                                                                                         <color key="textColor" red="0.44705882349999998" green="0.70980392160000005" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                                                                         <fontDescription key="fontDescription" name="Outfit-Regular" family="Outfit" pointSize="14"/>
@@ -1019,12 +1019,11 @@
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lNs-Zh-K3e">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="353" height="45"/>
                                                                                 <subviews>
-                                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Curriculum " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Urc-30-Nta">
-                                                                                        <rect key="frame" x="0.0" y="0.0" width="353" height="45"/>
-                                                                                        <fontDescription key="fontDescription" name="Outfit-Regular" family="Outfit" pointSize="16"/>
-                                                                                        <color key="textColor" red="0.46666666670000001" green="0.46666666670000001" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                                                        <nil key="highlightedColor"/>
-                                                                                    </label>
+                                                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Curriculum" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lsR-rj-80c">
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="338" height="45"/>
+                                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                                        <textInputTraits key="textInputTraits"/>
+                                                                                    </textField>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="btA-sB-l0E">
                                                                                         <rect key="frame" x="338" y="17.666666666666686" width="10" height="10"/>
                                                                                         <subviews>
@@ -1050,13 +1049,13 @@
                                                                                     </view>
                                                                                 </subviews>
                                                                                 <constraints>
+                                                                                    <constraint firstAttribute="bottom" secondItem="lsR-rj-80c" secondAttribute="bottom" id="0tt-ro-nso"/>
                                                                                     <constraint firstItem="btA-sB-l0E" firstAttribute="centerY" secondItem="lNs-Zh-K3e" secondAttribute="centerY" id="4Lh-6V-feL"/>
                                                                                     <constraint firstAttribute="trailing" secondItem="btA-sB-l0E" secondAttribute="trailing" constant="5" id="B0t-gw-GdE"/>
-                                                                                    <constraint firstItem="Urc-30-Nta" firstAttribute="leading" secondItem="lNs-Zh-K3e" secondAttribute="leading" id="Hq4-1o-X4t"/>
+                                                                                    <constraint firstItem="lsR-rj-80c" firstAttribute="leading" secondItem="lNs-Zh-K3e" secondAttribute="leading" id="SRx-b2-EAB"/>
                                                                                     <constraint firstAttribute="height" constant="45" id="Sj1-oi-kw6"/>
-                                                                                    <constraint firstAttribute="trailing" secondItem="Urc-30-Nta" secondAttribute="trailing" id="pVL-H0-OQ0"/>
-                                                                                    <constraint firstItem="Urc-30-Nta" firstAttribute="top" secondItem="lNs-Zh-K3e" secondAttribute="top" id="upp-6k-L17"/>
-                                                                                    <constraint firstAttribute="bottom" secondItem="Urc-30-Nta" secondAttribute="bottom" id="we4-iY-Ilt"/>
+                                                                                    <constraint firstItem="btA-sB-l0E" firstAttribute="leading" secondItem="lsR-rj-80c" secondAttribute="trailing" id="W2g-GH-5Fh"/>
+                                                                                    <constraint firstItem="lsR-rj-80c" firstAttribute="top" secondItem="lNs-Zh-K3e" secondAttribute="top" id="hep-gj-Wzi"/>
                                                                                 </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2tW-az-OJa">
@@ -1120,15 +1119,15 @@
                                                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AOJ-EI-b0P">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="353" height="30"/>
                                                                                         <color key="backgroundColor" red="0.93333333330000001" green="0.92941176469999998" blue="0.92941176469999998" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
-                                                                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gdE-n4-Qeo">
+                                                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gdE-n4-Qeo">
                                                                                             <size key="itemSize" width="128" height="128"/>
                                                                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                                         </collectionViewFlowLayout>
                                                                                         <cells>
-                                                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="tlV-lN-kiK">
-                                                                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="stage" id="tlV-lN-kiK">
+                                                                                                <rect key="frame" x="0.0" y="-49" width="128" height="128"/>
                                                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hkJ-Qh-Jjl">
                                                                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -1214,7 +1213,7 @@
                                                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                                         </collectionViewFlowLayout>
                                                                                         <cells>
-                                                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CSr-MN-qMa">
+                                                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="gender" id="CSr-MN-qMa">
                                                                                                 <rect key="frame" x="0.0" y="-49" width="128" height="128"/>
                                                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1la-ez-rA1">
@@ -1301,7 +1300,7 @@
                                                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                                         </collectionViewFlowLayout>
                                                                                         <cells>
-                                                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="DXO-On-eaq">
+                                                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="school" id="DXO-On-eaq">
                                                                                                 <rect key="frame" x="0.0" y="-49" width="128" height="128"/>
                                                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bYN-lU-cL4">
@@ -1420,7 +1419,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cityTextField" destination="pwV-jy-ayD" id="gQV-hb-chR"/>
+                        <outlet property="curriculumTextField" destination="lsR-rj-80c" id="X10-yO-gMc"/>
                         <outlet property="genderCollectionView" destination="ckC-p2-KXO" id="SYs-yz-Osw"/>
+                        <outlet property="regionTextField" destination="nHy-lz-vwj" id="QTf-4h-wVe"/>
                         <outlet property="stageCollectionView" destination="AOJ-EI-b0P" id="PSQ-lw-AZe"/>
                         <outlet property="typeCollectionView" destination="YyI-EA-ItM" id="AoV-CJ-pFL"/>
                     </connections>
