--- a/Find One/Module/SideMenu/FilterModule/Cell/FilterCollectionViewCell.xib
+++ b/Find One/Module/SideMenu/FilterModule/Cell/FilterCollectionViewCell.xib
@@ -1,21 +1,74 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FilterCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="FilterCollectionViewCell" customModule="Find_One" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="129" height="38"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="129" height="38"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QfA-Tp-1Ee">
+                        <rect key="frame" x="0.0" y="0.0" width="129" height="38"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All grades" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BBx-eY-gjG">
+                                <rect key="frame" x="0.0" y="0.0" width="129" height="38"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="BBx-eY-gjG" secondAttribute="trailing" id="4Ku-1F-OYJ"/>
+                            <constraint firstAttribute="bottom" secondItem="BBx-eY-gjG" secondAttribute="bottom" id="Raa-dC-BjE"/>
+                            <constraint firstItem="BBx-eY-gjG" firstAttribute="top" secondItem="QfA-Tp-1Ee" secondAttribute="top" id="YAw-Fq-dKa"/>
+                            <constraint firstItem="BBx-eY-gjG" firstAttribute="leading" secondItem="QfA-Tp-1Ee" secondAttribute="leading" id="i29-8C-VxX"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="ibcornerRadius">
+                                <real key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" systemColor="systemGray2Color"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="QfA-Tp-1Ee" secondAttribute="bottom" id="0S8-RN-0eK"/>
+                <constraint firstItem="QfA-Tp-1Ee" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="0U2-O2-b0Z"/>
+                <constraint firstAttribute="bottom" secondItem="QfA-Tp-1Ee" secondAttribute="bottom" id="VRB-qU-VHE"/>
+                <constraint firstItem="QfA-Tp-1Ee" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ccS-9y-fxB"/>
+                <constraint firstItem="QfA-Tp-1Ee" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="g1m-jB-vqS"/>
+                <constraint firstItem="QfA-Tp-1Ee" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="mlm-uR-nI2"/>
+                <constraint firstAttribute="trailing" secondItem="QfA-Tp-1Ee" secondAttribute="trailing" id="nyf-Ao-JG6"/>
+                <constraint firstAttribute="trailing" secondItem="QfA-Tp-1Ee" secondAttribute="trailing" id="sT2-Sy-COa"/>
+            </constraints>
+            <size key="customSize" width="129" height="38"/>
+            <connections>
+                <outlet property="BgView" destination="QfA-Tp-1Ee" id="me9-Y4-vkZ"/>
+                <outlet property="label" destination="BBx-eY-gjG" id="PRg-6S-Wfb"/>
+            </connections>
+            <point key="canvasLocation" x="-61.832061068702288" y="15.492957746478874"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
