--- a/Find One/Storyboard/Menu.storyboard
+++ b/Find One/Storyboard/Menu.storyboard
@@ -1369,6 +1369,9 @@
                                                                                 <real key="value" value="5"/>
                                                                             </userDefinedRuntimeAttribute>
                                                                         </userDefinedRuntimeAttributes>
+                                                                        <connections>
+                                                                            <action selector="filterBtnAction:" destination="ceN-FJ-4jp" eventType="touchUpInside" id="VGc-W1-xAz"/>
+                                                                        </connections>
                                                                     </button>
                                                                 </subviews>
                                                                 <constraints>
