--- a/Find One/Storyboard/Profile.storyboard
+++ b/Find One/Storyboard/Profile.storyboard
@@ -201,7 +201,7 @@
                                                                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="JQy-gA-fPQ">
                                                                         <rect key="frame" x="0.0" y="0.0" width="333" height="130"/>
                                                                         <subviews>
-                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile.png" translatesAutoresizingMaskIntoConstraints="NO" id="MrV-lZ-ZEL">
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MrV-lZ-ZEL">
                                                                                 <rect key="frame" x="106" y="12" width="121" height="121"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" secondItem="MrV-lZ-ZEL" secondAttribute="height" multiplier="1:1" id="kgk-fE-nsq"/>
@@ -986,7 +986,7 @@
                                                                                     <color key="titleColor" red="0.44705882349999998" green="0.70980392160000005" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                                 </state>
                                                                                 <connections>
-                                                                                    <action selector="updateBtnAction:" destination="pkW-fC-ohm" eventType="touchUpInside" id="1yU-cn-hea"/>
+                                                                                    <action selector="updateBtnAction:" destination="pkW-fC-ohm" eventType="touchUpInside" id="f0f-3t-oo2"/>
                                                                                 </connections>
                                                                             </button>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OB1-PC-x3P">
@@ -1111,7 +1111,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Profile.png" width="81" height="80"/>
         <image name="camera" width="23" height="21"/>
         <image name="logout-2_svgrepo.com" width="60" height="60"/>
         <image name="profile" width="25" height="25"/>
